--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
           python-version: '2.7'
       - name: Run commands
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip virtualenv
           ./mach bootstrap
           ./mach build --dev
