--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,6 @@ jobs:
       - name: Run commands
         run: |
           python -m pip install --upgrade pip virtualenv
+          sudo apt install libdbus-glib-1-dev
           ./mach bootstrap
           ./mach build --dev
