--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Run commands
         run: |
           python -m pip install --upgrade pip virtualenv
-          sudo apt install libdbus-glib-1-dev
+          sudo apt update
+          sudo apt upgrade -y
+          sudo apt dist-upgrade -y
+          sudo apt install -y libdbus-glib-1-dev
           ./mach bootstrap
           ./mach build --dev
