--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 env:
   RUST_BACKTRACE: 1
+  SHELL: /bin/bash
 
 jobs:
   build:
@@ -19,8 +20,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip virtualenv
           sudo apt update
-          sudo apt upgrade -y
-          sudo apt dist-upgrade -y
           sudo apt install -y libdbus-glib-1-dev
           ./mach bootstrap
           ./mach build --dev
