--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ env:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 2.7
@@ -20,6 +20,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip virtualenv
           sudo apt update
-          sudo apt install -y libdbus-glib-1-dev
           ./mach bootstrap
           ./mach build --dev
