--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,13 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 2.7
+      - name: Set up Python 3.8
         uses: actions/setup-python@v1
         with:
-          python-version: '2.7'
+          python-version: '3.8'
       - name: Run commands
         run: |
-          python -m pip install --upgrade pip virtualenv
+          python3 -m pip install --upgrade pip virtualenv
           sudo apt update
-          ./mach bootstrap
-          ./mach build --dev
+          python3 ./mach bootstrap
+          python3 ./mach build --dev
